# python-logging-with-context

./: .pre-commit-config.yaml  404.html  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements-lint.txt
api/: index.html
api/adapters/: index.html
api/filters/: index.html
api/formatters/: index.html
api/global_context/: index.html
contextual_logger/: adapters.py  filters.py  formatters.py
docs/: howto.md
howto/: index.html
src/contextual_logger/: __init__.py  adapters.py  formatters.py  global_context.py
src/contextual_logging/: adapters.py  formatters.py  global_context.py
src/logging_with_context/: global_context.py
tests/contextual_logger/: test_adapters.py  test_formatters.py  test_global_context.py
tests/contextual_logging/: test_adapters.py  test_formatters.py  test_global_context.py
tests/logging_with_context/: test_global_context.py
