[project]
name = "contextual-logger"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Caro", email = "terseus@fastmail.com" }
]
requires-python = ">=3.9"
dependencies = []
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
lint = []
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
]
